[gd_scene load_steps=9 format=3 uid="uid://c1cbalbk5h1vq"]

[ext_resource type="Script" uid="uid://dgje3tt43e3g0" path="res://scenes/components/tutorial_component.gd" id="1_p7gwk"]
[ext_resource type="PackedScene" uid="uid://batnl3ulwlbrb" path="res://scenes/components/interactable_component.tscn" id="1_wg26i"]
[ext_resource type="Texture2D" uid="uid://b1vfi60g2durw" path="res://assets/ui/basic_ui_sprite.png" id="3_fetyc"]
[ext_resource type="FontFile" uid="uid://c501ldv06kqn1" path="res://assets/ui/fonts/zx_palm.ttf" id="4_a0jh5"]
[ext_resource type="Theme" uid="uid://dhsgc6k51h0rn" path="res://scenes/ui/game_ui_theme.tres" id="5_0upb0"]
[ext_resource type="FontFile" uid="uid://di7gplllef8xy" path="res://assets/ui/fonts/pixelFont-7-8x14-sproutLands.ttf" id="6_a0jh5"]

[sub_resource type="CircleShape2D" id="CircleShape2D_p7gwk"]
radius = 104.561

[sub_resource type="AtlasTexture" id="AtlasTexture_rvp7t"]
atlas = ExtResource("3_fetyc")
region = Rect2(1038, 208, 36, 34)

[node name="TutorialComponent" type="Node2D"]
script = ExtResource("1_p7gwk")

[node name="InteractableComponent" parent="." instance=ExtResource("1_wg26i")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractableComponent"]
shape = SubResource("CircleShape2D_p7gwk")

[node name="InteractableLabel" type="TextureRect" parent="."]
offset_left = -19.0
offset_top = -44.0
offset_right = 21.0
offset_bottom = -4.0
texture = SubResource("AtlasTexture_rvp7t")

[node name="Label" type="Label" parent="InteractableLabel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -8.5
offset_top = -7.5
offset_right = 8.5
offset_bottom = 7.5
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("4_a0jh5")
theme_override_font_sizes/font_size = 17
text = "E"

[node name="BoxLabel" type="PanelContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -89.5
offset_top = -122.0
offset_right = 89.5
offset_bottom = -82.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("5_0upb0")
theme_type_variation = &"DayNightCounterPanel"

[node name="Label" type="Label" parent="BoxLabel"]
layout_mode = 2
theme_override_fonts/font = ExtResource("6_a0jh5")
theme_override_font_sizes/font_size = 18
text = "a"
horizontal_alignment = 1

[node name="LifeTime" type="Timer" parent="."]
wait_time = 30.0
one_shot = true
